# myGit

./: README.txt
mysylar/: CMakeLists.txt
mysylar/server/: log.cc  log.h
mysylar/tests/: test_log.cc
